fix rss feed stores getting out of date, r=neil, bug 687430